Update Blog “2021-12-22-اول-مقاااال-يااااه”

--- a/src/blog/2021-12-22-اول-مقاااال-يااااه.md
+++ b/src/blog/2021-12-22-اول-مقاااال-يااااه.md
@@ -7,6 +7,7 @@ image: /assets/blog/65ef49ec7061b053baa6f460d0cb54ce.png
 imageAlt: قط خارق وصبور
 tags:
   - Ar
+  - featured
 ---
 اهلا يا قوميييي انا حمزة الخارق
 
